[metadata]
name = cee_profiles
version = 0.0.0
description = python functions to create profiles from MANGA outputfiles
long_description = file: README.md
author = Vinaya Valsa
author_email = valsanvinaya@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.0
include_package_data = True
